--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
-  background-color: #eeeeee;
+  background-color: #ffffff;
 
 }
 
@@ -25,12 +25,13 @@ body {
   font-size: 14px;
   line-height: 26px;
   color: #000000;
-
 }
 
 .main-navigation,
 .navi {
   list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
 .main-navigation a,
@@ -43,8 +44,8 @@ body {
 .main-navigation a:focus,
 .navi a:hover,
 .navi a:focus {
-background-color: #81b3d2;
-color: #ffffff;
+  background-color: #81b3d2;
+  color: #ffffff;
 }
 
 .description h2 {
@@ -63,6 +64,7 @@ color: #ffffff;
 
 ul {
   list-style: none;
+  text-align: center;
 }
 
 .index-true {
@@ -79,19 +81,90 @@ ul {
   text-align: center;
 }
 
-.true-city h3 {
+li h3 {
   font-size: 21px;
+  line-height: 21px;
+}
+
+.area,
+.road,
+.tourists {
+  background-color: #eeeeee;
+  background-position: 0 0;
+  background-repeat: repeat;
+  width: 400px;
+  height: 256px;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.interested {
+   text-align: center;
 }
 
 
+.interested h2 {
+  font-size: 30px;
+  line-height: 36px;
+  color: #000000;
+}
+
+.interested p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #333333;
+}
+
+.search-button {
+  width: 568px;
+  height: 86px;
+  background: #766357;
+  border: none;
+  text-transform: uppercase;
+  font-size: 21px;
+  font-weight: bold;
+  color: #ffffff;
+  }
+
+  .search-button:hover,
+  .search-button:focus {
+    background-color: #604e43;
+  }
+
+  .search-button:active {
+    background-color: #503e33;
+  }
+
+  .page-footer {
+    background-color: rgba(225, 225, 225, 0.9);
+    width: 1200px;
+    height: 120px;
+  }
 
 
 
+.page-footer p {
+  text-transform: uppercase;
+  font-size: 21px;
+  line-height: 26px;
+  color: #000000;
+  text-align: left;
+  
+
+}
 
 
+.twitter {
+  background-image: url("../img/twitter.svg");
+}
 
+.facebook {
+  background-image: url("../img/facebook.svg");
+}
 
-
+.youtube {
+  background-image: url("../img/youtube.svg");
+}
 
 
 
