--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,24 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'PT Sans', Arial, sans-serif;
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
-  font-weight: 700;
+  font-weight: normal;
   color: #000000;
   text-transform: uppercase;
   background-color: #ffffff;
-
-}
-
-a {
-  text-decoration: none;
-}
-
-body {
   background-image: url(../img/background-photo.jpg);
   background-position: top center;
   background-repeat: no-repeat;
 }
 
-.main-navigation {
+/* Шапка страницы */
+.main-navigation a {
   font-size: 14px;
   line-height: 26px;
   color: #000000;
+  text-decoration: none;
 }
 
 .main-navigation,
@@ -38,6 +32,9 @@ body {
 .navi a {
   color:#000000;
   background-color: #ffffff;
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
 .main-navigation a:hover,
@@ -47,11 +44,10 @@ body {
   background-color: #81b3d2;
   color: #ffffff;
 }
-
+/* основное содержимое*/
 .description h2 {
   font-size: 21px;
   line-height: 26px;
-  font-weight: bold;
   text-align: center;
 }
 
@@ -97,7 +93,7 @@ li h3 {
   text-align: center;
   padding-top: 50px;
 }
-
+/*форма*/
 .interested {
    text-align: center;
 }
@@ -114,7 +110,7 @@ li h3 {
   line-height: 24px;
   color: #333333;
 }
-
+/*Кнопка*/
 .search-button {
   width: 568px;
   height: 86px;
@@ -134,14 +130,12 @@ li h3 {
   .search-button:active {
     background-color: #503e33;
   }
-
+/*Подвал*/
   .page-footer {
     background-color: rgba(225, 225, 225, 0.9);
     width: 1200px;
     height: 120px;
   }
-
-
 
 .page-footer p {
   text-transform: uppercase;
