--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
 
 .list-style-none li {
   list-style: none;
+
 }
 .wrapper {
  width: 1200px;
@@ -41,13 +42,15 @@ body {
   background-repeat: no-repeat;
   position: relative;
   text-align: center;
+  padding-bottom: 79px;
 
 }
 
 .main-navigation  {
   position: relative;
   background-color: #ffffff;
-  padding-bottom: 20px;
+  height: 56px;
+
 }
 
 .main-navigation a {
@@ -62,13 +65,19 @@ body {
   display: flex;
   justify-content: space-between;
   padding-left: 0;
+  margin: 0;
+  align-items: center;
+  height: 100%;
 
 }
 
 .site-navigation a {
   color:#000000;
   background-color: #ffffff;
+}
 
+.site-navigation li {
+  width: 200px;
 }
 
 .main-navigation a:hover,
@@ -78,6 +87,25 @@ body {
   background-color: #81b3d2;
   color: #ffffff;
 }
+.logo-image {
+  position: absolute;
+  left: 50%;top: 0;
+  z-index: 11;
+  margin-left: -70px;
+}
+.welcome-image {
+  margin-top: 76px;
+  /*можно ли перенести ширину и высоту из инлайна*/
+}
+
+.polygon-image {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  /*прозрачный нижний край?*/
+}
+
 /* основное содержимое*/
 .page-index {
   text-align: center;
@@ -98,10 +126,24 @@ body {
 .advantages ul{
   list-style: none;
   display: flex;
-  width: 400px;
+  /* width: 400px; */
   padding-left: 0;
+}
 
+.advantages li {
+  display: flex;
+}
 
+.main-advantages .advantages{
+  padding-left: 0;
+}
+
+.additional li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  width: 400px;
 }
 
 .index-true {
@@ -147,13 +189,21 @@ li h3 {
 }
 /*Попап форма поиска гостиницы*/
 .search-hotels {
-  width: 568px;
   height: 395px;
   box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
   background-position: center;
   font-size: 14px;
-  font-weight: bold; /*выровнять по центру?*/
+  font-weight: bold;
+  /*выровнять по центру?*/
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
+
+.form {
+  width: 568px;
+}
+
 
 .search-hotels label,
 .search-hotels input[type="date"],
@@ -199,7 +249,7 @@ li h3 {
   color: #ffffff;
 }
 
-.search-button:focus {
+.search-button:hover {
   background-color: #604e43;
   }
 
@@ -221,7 +271,7 @@ li h3 {
     color: #ffffff;
     }
 
-  .blue-search-button:focus {
+  .blue-search-button:hover{
     background-color: #669ec0;
     }
 
@@ -230,8 +280,14 @@ li h3 {
     color: rgba(255, 255, 255, 0.3);
     }
 
+.row {
+  display: flex;
+  justify-content: space-between;
+}
 
-
+.row div {
+  padding: 0 43px;
+}
 
 /*Подвал*/
   .page-footer {
