--- a/css/styles.css
+++ b/css/styles.css
@@ -368,12 +368,10 @@ display: flex;
 
  /* страница отелей */
 
- /* body a{
-   text-decoration: none;
-   color: black;
- }
-*/
+
  .page-header-hotels {
+    padding: 0;
+    margin: 0;
     background-color: #669ec0;
     background-image: url(../img/filter-background.jpg);
     background-position: top center;
@@ -383,17 +381,84 @@ display: flex;
     padding-bottom: 562px;
   }
 
-  .feature-filter-hotels {
+  .container-filter-hotels {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 1200px;
+    height: 100%;
     align-items: center;
-    width: 100px;
-   justify-content: space-around;
-   padding-left: 72px;
-   border: none;
+    justify-content: space-around;
   }
 
+  .infrastrukture,
+  .housing,
+  .price {
+    width: 40%;
+  }
+
+.feature-results {
+  display: flex;
+  flex-direction: row;
+}
+
+.feature-results h3 {
+  font-size: 12px;
+  font-weight: normal;
+  width: 75px;
+  margin-right: 40px;
+}
+
+.feature-results h2 {
+  width: 115px;
+  margin-left: 72px;
+  margin-right: 49px;
+}
+
+.feature-results  ul {
+  display: flex;
+  font-size: 12px;
+  font-weight: normal;
+  width: 100%;
+  justify-content: space-between;
+
+}
+
+.feature-filter .dashed {
+  text-decoration: none;
+  text-align: left;
+  border-bottom: 1px dashed #81b3d2;
+}
+
+.feature-filter .active-link {
+  border: none;
+  color: #81b3d2; /*не работают стили для ссылок*/
+}
+
+.feature-sort {
+  display: flex;
+
+}
+
+.hotel-results {
+  padding: 0;
+  margin:  0;
+  display: flex;
+  flex-direction: column;
+}
 
 
+.hotel-two,
+.hotel-three {
+  display: flex;
+  flex-direction: row;
+  padding-left: 72px;
+}
 
+.hotel-one {
+  display: flex;
+  flex-direction: row;
+}
 
+.hotel-one ul{
+height: 100%;
+}
