--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
   color: #000000;
   text-transform: uppercase;
   background-color: #ffffff;
+  text-align: center;
 
 }
 /*помощь в разметке*/
@@ -39,12 +40,15 @@ body {
 /* Шапка страницы */
 .page-header {
   background-color: #669ec0;
-  background-image: url(../img/background-photo.jpg);
-  background-position: top center;
+  background-image: url(../img/polygon.png),
+  url(../img/welcome.png),
+  url(../img/background-photo.jpg);
+  background-position: bottom center, 370px 132px, top center;
   background-repeat: no-repeat;
   position: relative;
   text-align: center;
-  padding-bottom: 79px;
+  min-height: 753px;
+  background-size: 1200px 59px, 459px 353px, 1200px 773px;
 
 }
 
@@ -60,6 +64,9 @@ body {
   color: #000000;
   text-decoration: none;
   width: 239px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
 
 .site-navigation {
@@ -76,37 +83,30 @@ body {
 .site-navigation a {
   color:#000000;
   background-color: #ffffff;
+  display: block;
 }
 
-.site-navigation li {
-  width: 200px;
-}
 
 .main-navigation a:hover,
-.main-navigation a:focus,
-.site-navigation a:hover,
-.site-navigation a:focus {
-  background-color: #81b3d2;
-  color: #ffffff;
+.site-navigation a:hover {
+  color: #81b3d2;
 }
+
+.main-navigation a:focus,
+.site-navigation a:focus {
+  color: rgba(0, 0, 0, 0.3)
+
+}
+
+
 .logo-image {
   position: absolute;
   left: 50%;top: 0;
   z-index: 11;
   margin-left: -70px;
 }
-.welcome-image {
-  margin-top: 76px;
-  /*можно ли перенести ширину и высоту из инлайна*/
-}
 
-.polygon-image {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  /*прозрачный нижний край?*/
-}
+
 
 /* основное содержимое*/
 .page-index {
@@ -172,6 +172,7 @@ body {
 
 .index-true h3 {
   width: 140px;
+
 }
 
 .index-true p {
@@ -431,7 +432,7 @@ li h3 {                  /*подумать с чем объединить*/
   background-position: center;
 }
 
-.page-footer .conteiner {
+.page-footer .container {
 display: flex;
 justify-content: space-around;
 width: 1200px;
@@ -701,3 +702,4 @@ width: 1200px;
 .hotel-one ul{
 height: 100%;
 }
+
