--- a/css/styles.css
+++ b/css/styles.css
@@ -135,27 +135,40 @@ body {
   margin-bottom: 56px;
 }
 
+.main-advantages .advantages {
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .advantages ul{
   list-style: none;
   display: flex;
-  margin: 0;
+  flex-wrap: wrap;
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
+
+}
+
+.additional ul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .advantages li {
   display: flex;
 }
 
-.main-advantages .advantages{
-  padding-left: 0;
-}
+
+
 
 .additional li {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 40px;
-  width: 400px;
+  width: 320px;
 }
 
 .index-true,
@@ -376,7 +389,7 @@ li h3 {                  /*подумать с чем объединить*/
 }
 
 .interactive-map {
-  position: relative;
+  display: flex;
 }
 
 /*Подвал*/
