--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ a {
   background-repeat: no-repeat;
   position: relative;
   text-align: center;
-  min-height: 753px;
+  min-height: 509px;
   background-size: 1200px 59px, 459px 353px, 1200px 773px;
 
 }
@@ -107,9 +107,8 @@ a {
 
 .logo-image {
   position: absolute;
-  left: 50%;top: 0;
-  z-index: 11;
-  margin-left: -70px;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 
@@ -293,8 +292,12 @@ li h3 {                  /*подумать с чем объединить*/
   justify-content: space-around;
 }
 
-.form-index-hotel{
+.form-index-hotel {
   width: 568px;
+}
+
+.container-date {
+  width: 681px;
 }
 
 .search-hotels label,
@@ -480,6 +483,7 @@ width: 1200px;
   background-size:  cover;
   background-repeat: no-repeat;
   background-position: 100%;
+  display: flex;
 }
 
 .form  {
