--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   text-transform: uppercase;
   background-color: #ffffff;
   text-align: center;
+  min-width: 1200px;
 
 }
 /*помощь в разметке*/
@@ -27,7 +28,7 @@ body {
 .list-style-none  {
   padding: 0;
   list-style: none;
-  padding: 0;
+  
 
 }
 
@@ -66,18 +67,21 @@ a {
 
 }
 
-.main-navigation a {
+.site-navigation a {
   font-weight: bold;
   color: #000000;
   text-decoration: none;
-  width: 239px;
+  /* width: 140px;  */
   padding-top: 10px;
   padding-bottom: 10px;
+  display: block;
+  text-align: left;
+  padding-left: 70px;
 
 }
 
 .site-navigation {
-  list-style: none;
+ 
   display: flex;
   justify-content: space-between;
   padding-left: 0;
@@ -87,26 +91,19 @@ a {
 
 }
 
-.site-navigation a {
-  color:#000000;
-  background-color: #ffffff;
-  display: block;
-  margin: 0;
 
-}
 
 .site-navigation li {
   width: 240px;
 }
 
 .site-navigation li:nth-child(2) {
-  margin-right: 50px;
-  text-align: start;
+  margin-right: 20%;
+  text-align: left;
 }
 
 .site-navigation li:nth-child(3) {
-  margin-left: 50px;
-  text-align: end;
+  text-align: right;
 }
 
 
