--- a/css/styles.css
+++ b/css/styles.css
@@ -477,6 +477,10 @@ li h3 {                  /*подумать с чем объединить*/
   width: 100%;
 }
 
+.page-footer-catalog {
+  background-color: white;
+}
+
 .contacts {
   margin: 0;
   width: 300px;
@@ -537,7 +541,9 @@ li h3 {                  /*подумать с чем объединить*/
   background-position: center;
 }
 
-.page-footer .container {
+.page-footer,
+.page-footer-catalog,
+.container {
 display: flex;
 justify-content: space-around;
 width: 1200px;
